jsxc.css
/* ... */
div.jsxc_chatmessage a {
	color: blue;
	text-decoration: underline;
}

div.jsxc_chatmessage img {
	width: 19px;
	height: 19px;
	background-size: 19px 19px;
}

/** incoming message */
div.jsxc_in {
	float: left;
	position: relative;
	margin-left: 10px;
	background: #f1f7fd;
	border: solid 1px #a6b8c9;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

div.jsxc_in:after {
	content: '';
	position: absolute;
	border-style: solid;
	border-width: 5px 6px 5px 0;
	border-color: transparent #f1f7fd;
	display: block;
	width: 0;
	z-index: 1;
	left: -6px;
	bottom: 10px;
}

div.jsxc_out.jsxc_received:before {
	content: '✓';
	position: absolute;
	bottom: 2px;
	right: 2px;
	font-size: 12px;
	line-height: 12px;
	color: green;
}

/** outgoing message */
div.jsxc_out {
	float: right;
	position: relative;
	margin-right: 10px;
	background: #e6ffd1;
	border: solid 1px #b4d89f;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

div.jsxc_out:after {
	content: '';
	position: absolute;
	border-style: solid;
	border-width: 5px 0 5px 6px;
	border-color: transparent #e6ffd1;
	display: block;
	width: 0;
	z-index: 1;
	right: -6px;
	bottom: 10px;
}

/** system message */
div.jsxc_sys {
	width: auto;
	max-width: none;
	padding-right: 4px;
	box-sizing: border-box;
	margin-right: 3px;
	border-radius: 3px;
}

.jsxc_window input.jsxc_textinput {
	width: 100%;
	height: 30px;
	margin: 0px;
	padding: 3px;
	padding-right: 40px;
	outline: none;
	border-radius: 0px;
	box-sizing: border-box;
	text-align: right;
}

.jsxc_window ::-webkit-input-placeholder {
	color: #000;
	opacity: 0.3;
}

.jsxc_window ::-moz-placeholder {
	color: #000;
	opacity: 0.3;
} /* firefox 19+ */
.jsxc_window :-ms-input-placeholder {
	color: rgba(0, 0, 0, 0.4);
} /* ie */
.jsxc_window input:-moz-placeholder {
	color: #000;
	opacity: 0.3;
}

div.jsxc_window .jsxc_tools {
	height: 26px;
	float: right;
}

.jsxc_min .jsxc_tools {
	display: none;
}

div.jsxc_window .jsxc_tools > div {
	width: 17px;
   height: 26px;
   display: block;
   float: left;
   color: #939393;
   font-family: Arial;
   line-height: 26px;
   cursor: pointer;
   text-align: center;
}

div.jsxc_settings {
	background-image: url('img/gear_grey.svg');
	background-size: 15px 15px;
	background-repeat: no-repeat;
	background-position: center center;
	overflow: visible;
}

div.jsxc_settings:hover,div.jsxc_settings.hover {
	background-image: url('img/gear_white.svg');
}

div.jsxc_settings ul {
	list-style: none;
	padding: 0px;
	margin: 0px;
	position: absolute;
	top: 30px;
	left: 0px;
	box-shadow: 0px 5px 5px -5px #000;
	z-index: 110;
	overflow: visible;
	background-color: #282323;
	display: none;
}

div.jsxc_settings li {
	width: 170px;
	margin-left: 20px;
	padding-left: 10px;
	height: 30px;
	line-height: 30px;
	text-align: left;
	cursor: pointer;
}

div.jsxc_settings li:first-child {
	border-top: 1px solid #ccc;
}

div.jsxc_settings li:hover:not(.jsxc_disabled ){
	color: #fff;
	background-color: #3F8FBA;
}

div.jsxc_settings li.jsxc_disabled {
	color: #595959;
	cursor: default;
}

.jsxc_tools > div.jsxc_disabled {
   opacity: 0.5;
   cursor: default !important;
}

div.jsxc_transfer, div.jsxc_transfer.jsxc_disabled:hover {
	background-image: url('img/padlock_open_grey.svg');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 12px 12px;
}

div.jsxc_transfer:hover {
	background-image: url('img/padlock_open_white.svg');
}

div.jsxc_transfer.jsxc_fin {
	background-image: url('img/padlock_close_grey.svg');
}

div.jsxc_transfer.jsxc_enc {
	background-image: url('img/padlock_close_orange.svg');
}

div.jsxc_transfer.jsxc_enc.jsxc_trust {
	background-image: url('img/padlock_close_green.svg');
}

.jsxc_window .jsxc_close {
	font-size: 20px;
}

.jsxc_window .jsxc_close:hover {
	color: #FAFAFA;
}

#colorbox,#cboxWrapper {
	outline: none;
}

/*############################
 *######### Other ############
 *############################*/
ul.jsxc_vCard {
	min-width: 400px;
}

ul.jsxc_vCard ul {
	margin-left: 20px;
}

ul.jsxc_vCard li {
	cursor: default !important;
}

ul.jsxc_vCard strong {

}

img.jsxc_vCard {
	float: right;
	max-width: 200px;
	max-height: 200px;
	border: 5px solid white;
	border-radius: 2px;
}

.jsxc_window .ui-resizable-w {
	left: 0px;
}

.jsxc_window .ui-resizable-nw {
   top: 0px;
   left: 0px;
   width: 15px;
   height: 15px;
   z-index: 95 !important;
}

.jsxc_window .ui-resizable-n {
   position: absolute;
   top: 0px;
   left: 0px;
   right: 0px;
   height: 15px;
   z-index: 100;
   background: -moz-linear-gradient(top, rgba(164, 164, 164, 1) 0%,
      rgba(40, 35, 35, 0) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(164,
      164, 164, 1)), color-stop(100%, rgba(40, 35, 35, 0)));
   /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, rgba(164, 164, 164, 1) 0%,
      rgba(40, 35, 35, 0) 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, rgba(164, 164, 164, 1) 0%,
      rgba(40, 35, 35, 0) 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top, rgba(164, 164, 164, 1) 0%,
      rgba(40, 35, 35, 0) 100%); /* IE10+ */
   background: linear-gradient(to bottom, #a4a4a4 0%, rgba(40, 35, 35, 0)
      100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4a4a4',
      endColorstr='#00282323', GradientType=0); /* IE6-9 */
}

.jsxc_emoticon {
  width: 19px;
  height: 19px;
  background-size: 19px 19px !important;
  border: 0px;
}

.jsxc_angel { background: url('img/emotions/angel.png') }

.jsxc_angry { background: url('img/emotions/angry.png') }

.jsxc_smile { background: url('img/emotions/smile.png') }

.jsxc_grin { background: url('img/emotions/grin.png') }

.jsxc_sad { background: url('img/emotions/sad.png') }

.jsxc_wink { background: url('img/emotions/wink.png') }

.jsxc_tonguesmile { background: url('img/emotions/tonguesmile.png') }
/* ... */

